--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -1,4 +1,5 @@
-<h2>New User!</h2>
+<h1>Create a New Band!</h1>
+
 <div class="container">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
@@ -6,21 +7,17 @@
       <% end %>
 </div>
 
-<form action=" <%= users_url %>" method = 'post' >
+<form action=" <%= bands_url %>" method = 'post' >
 	<input
 	type="hidden"
 	name="authenticity_token"
 	value="<%= form_authenticity_token %>">
-<label for='email'>Email</label>
+
+<label for='name'>Band Name</label>
 <input type='text'
-			name='user[email]'
-			id='email'
+			name='band[name]'
+			id='name'
 			value=''>
 <br>
-<label for='password'>Password</label>
-<input type='text'
-			name='user[password]'
-			id='password'
-			value=''>
 
 <input type='submit'>
